Move tests to correct package, showcase Mockito